--- a/package.json
+++ b/package.json
@@ -1,14 +1,21 @@
 {
-  "name": "astro-match-time",
-  "type": "module",
-  "version": "0.0.1",
-  "scripts": {
-    "dev": "astro dev",
-    "build": "astro build",
-    "preview": "astro preview",
-    "astro": "astro"
-  },
-  "dependencies": {
-    "astro": "^5.9.3"
-  }
+	"name": "astro-match-time",
+	"type": "module",
+	"version": "0.0.1",
+	"scripts": {
+		"dev": "astro dev",
+		"build": "astro build",
+		"preview": "astro build && wrangler pages dev",
+		"astro": "astro",
+		"deploy": "astro build && wrangler pages deploy",
+		"cf-typegen": "wrangler types"
+	},
+	"dependencies": {
+		"@astrojs/cloudflare": "^12.5.4",
+		"astro": "^5.9.3"
+	},
+	"devDependencies": {
+		"@types/node": "^24.0.1",
+		"wrangler": "^4.20.0"
+	}
 }
