--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
 	},
 	"dependencies": {
 		"@astrojs/cloudflare": "^12.5.4",
-		"astro": "^5.9.3"
+		"@tailwindcss/vite": "^4.1.10",
+		"astro": "^5.9.3",
+		"tailwindcss": "^4.1.10"
 	},
 	"devDependencies": {
 		"@types/node": "^24.0.1",
